# scoa-agents-simpler

./: .gitignore  README.md  agents.py  main.py  pyproject.toml  tasks.py
notes/: expected.md  free.md  input.md  results.md
rag/: embedder.py
tools/: rag_tool.py
